--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hrony</title>
   </head>
   <body>
-    <a href="binary/hobuild" download>hobuild-1.0.0</a>
+    <a href="binary/cfetch" download>cfetch-1.0.0</a>
   </body>
 </html>
