--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hrony</title>
+    <title>Lithium</title>
   </head>
   <body>
     <a href="binary/cfetch" download>cfetch-1.0.0</a>
