--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Lithium</title>
   </head>
   <body>
+    <a href="lithium/lithium" download>lithium-0.0.1</a>
     <a href="binary/cfetch" download>cfetch-1.0.0</a>
   </body>
 </html>
